# yuml-recipes-gnome

./: .gitignore  README.md  build.sh  export.sh  meson.build  org.yumlrecipes.yumlrecipes.json  org.yumlrecipes.yumlrecipes.yaml  run.sh
.github/workflows/: build.yaml
__github/workflows/: build.yaml
data/: meson.build  org.yumlrecipes.yumlrecipes.appdata.xml.in  org.yumlrecipes.yumlrecipes.desktop.in  org.yumlrecipes.yumlrecipes.gschema.xml  org.yumlrecipes.yumlrecipes.mime.xml
data/icons/: meson.build
po/: POTFILES  meson.build
preview/: Chili con Carne.yuml
src/: main.py  meson.build  window.css  window.py  window.ui  yumlrecipes.gresource.xml  yumlrecipes.in
